--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="/recipes/flan.html">Flan</a></li>
+    </ul>
 </body>
 </html>
