--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="/recipes/flan.html">Flan</a></li>
+        <li><a href="/recipes/brownies.html">Brownies</a></li>
     </ul>
 </body>
 </html>
