--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="/recipes/flan.html">Flan</a></li>
         <li><a href="/recipes/brownies.html">Brownies</a></li>
+        <li><a href="/recipes/egg-rolls.html">Egg Rolls</a></li>
     </ul>
 </body>
 </html>
