--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="/recipes/flan.html">Flan</a></li>
-        <li><a href="/recipes/brownies.html">Brownies</a></li>
-        <li><a href="/recipes/egg-rolls.html">Egg Rolls</a></li>
+        <li><a href="./recipes/flan.html">Flan</a></li>
+        <li><a href="./recipes/brownies.html">Brownies</a></li>
+        <li><a href="./recipes/egg-rolls.html">Egg Rolls</a></li>
     </ul>
 </body>
 </html>
