--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Brownies</h1>
-    <img src="/assets/brownies.webp" alt="Brownies">
+    <img src="../assets/brownies.webp" alt="Brownies">
     <h2>Description</h2>
     <p>This brownie recipe makes rich, fudgy brownies that always turn out well. They're topped with homemade chocolate frosting to make the best brownies ever!</p>
     <h2>Ingredients</h2>
