--- a/recipes/egg-rolls.html
+++ b/recipes/egg-rolls.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Egg Rolls</h1>
-    <img src="/assets/egg-rolls.webp" alt="Egg Rolls">
+    <img src="../assets/egg-rolls.webp" alt="Egg Rolls">
     <h2>Description</h2>
     <p>Crispy egg rolls filled with seasoned pork, cabbage, and carrots are a fabulous side dish to serve alongside stir-fry dishes. These homemade egg rolls are almost identical to what you'd get at a Chinese restaurant! Serve warm with egg roll sauce or soy sauce if desired.</p>
     <h2>Ingredients</h2>
