--- a/recipes/flan.html
+++ b/recipes/flan.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Flan</h1>
-    <img src="/assets/flan.webp" alt="Flan">
+    <img src="../assets/flan.webp" alt="Flan">
     <h2>Description</h2>
     <p>The best dessert ever invented!!</p>
     <h2>Ingredients</h2>
